Optimizing PredefinedSearch